RESOLVED FIXED136323
textStylingAtPosition returns incorrect values after executing toggleBold, toggleItalic and toggleUnderline
https://bugs.webkit.org/show_bug.cgi?id=136323
Summary textStylingAtPosition returns incorrect values after executing toggleBold, to...
Enrica Casucci
Reported 2014-08-27 17:11:43 PDT
textStylingAtPosition should always reflect the current style. It returns incorrect values when called after executing one of the toggle styling commands. rdar://problem/18141964
Attachments
Patch (6.31 KB, patch)
2014-08-27 17:22 PDT, Enrica Casucci
koivisto: review+
Enrica Casucci
Comment 1 2014-08-27 17:22:06 PDT
Antti Koivisto
Comment 2 2014-08-27 17:58:07 PDT
Comment on attachment 237272 [details] Patch Looks good. It would be nice if we could at some point have only one copy of this and perhaps also eliminate the whole insert-and-remove-span-to-figure-out-style hack.
David Kilzer (:ddkilzer)
Comment 3 2015-01-06 12:39:49 PST
Committed revision 173071. <http://trac.webkit.org/changeset/173071>
Note You need to log in before you can comment on or make changes to this bug.